Shifted entire site to prerender. Also fixed safari video poster issue.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -308,7 +308,7 @@
 		font-style: normal;
 		font-display: swap;
 	}
-	
+
 	@font-face {
 		font-family: 'PolySans';
 		src: url('/fonts/PolySans/PolySansTrial-BulkyItalic.woff2') format('woff2'),
@@ -317,7 +317,7 @@
 		font-style: italic;
 		font-display: swap;
 	}
-	
+
 	@font-face {
 		font-family: 'PolySans';
 		src: url('/fonts/PolySans/PolySansTrial-Slim.woff2') format('woff2'),
@@ -326,7 +326,7 @@
 		font-style: normal;
 		font-display: swap;
 	}
-	
+
 	@font-face {
 		font-family: 'PolySans';
 		src: url('/fonts/PolySans/PolySansTrial-SlimItalic.woff2') format('woff2'),
@@ -335,10 +335,10 @@
 		font-style: italic;
 		font-display: swap;
 	}
-	
-	
-	
-	
+}
+
+.plyr__video-wrapper {
+	z-index: 0;
 }
 
 /* @media (max-width: 1024px) {
